# rust-ddd-web-app-test

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/config/: mod.rs
src/domain/entity/: user.rs
src/domain/repository/: user.rs
src/infrastructure/: mod.rs
src/infrastructure/handler/: home.rs
src/infrastructure/repository/: user.rs
templates/home/: index.html
