[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "postgres", "uuid", "time" ] }
async-std = { version = "1", features = [ "attributes" ] }
async-trait = "0.1.56"