[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "postgres", "uuid", "time" ] }
async-std = { version = "1", features = [ "attributes" ] }
async-trait = "0.1.56"
actix-web = "4.1.0"
askama = { version = "0.11.1", features = ["with-actix-web"] }
askama_actix = "0.13.0"
env_logger = "0.9.0"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
dotenv = "0.15.0"
config = "0.13.1"
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
serde = { version = "1.0.138", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.1"
